--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Ulaanbataar   (12,478,447)</li>
+    <li>Czesky Budjovice  (12,478,447)</li>
   </ol>
 
 </body>
